develop Core QAA test task